# MCTS-TicTacToe-Parallel

./: .gitignore  CMakeLists.txt  Node.cpp  Node.h  README.md
include/: Node.hpp  State.hpp
include/gameboard/: ConnectFour.hpp  MPI_helpers.hpp  Move.hpp  State.hpp  TicTacToe.hpp  common.cpp  common.hpp  hashes.hpp
include/search/: MCTS.hpp  Node.hpp  PlayGame.hpp
src/: Node.cpp  State.cpp
src/gameboard/: ConnectFour.cpp  MPI_helpers.cpp  Move.cpp  State.cpp  TicTacToe.cpp  common.cpp
src/search/: MCTS.cpp  Node.cpp  PlayGame.cpp  main.cpp  tests.cpp
